# mpx

./: .gitmodules  README.md  pyproject.toml
mpx/config/: config_acrobot_swingup.py  config_aliengo_trot_two_step.py  config_barrel_roll.py  config_h1.py  config_h1_jump_forward.py  config_h1_kinodynamic.py
mpx/data/acrobot/: scene.xml
mpx/data/aliengo/: aliengo.xml  scene_flat.xml
mpx/data/unitree_h1/: mjx_h1_walk_real_feet_scene.xml  mjx_scene_h1_walk.xml
mpx/examples/: acrobot.py  acrobot_swingup.py  aliengo_trot_two_step.py  barrel_roll.py  benchmark_h1_parallel.py  h1_jump_forward.py  mjx_h1.py  mjx_h1_kinodynamic.py  mjx_quad.py  mjx_talos.py  offline_task.py  srbd_quad.py
mpx/utils/: lipa_solver.py  models.py  mpc_utils.py  mpc_wrapper.py  mpc_wrapper_srbd.py  objectives.py  offline_solver.py  sim.py
